--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "apexcharts": "^3.19.2",
     "bootstrap": "^4.5.0",
+    "canvasjs": "^1.8.3",
+    "chart.js": "^2.9.3",
     "jquery": "^3.5.1",
+    "ng-apexcharts": "^1.3.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
