--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.5",
+    "@angular/animations": "^9.0.7",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.5",
     "@angular/compiler": "~9.0.5",
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.0",
     "canvasjs": "^1.8.3",
     "chart.js": "^2.9.3",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "ng-apexcharts": "^1.3.0",
     "ng2-search-filter": "^0.5.1",
