--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "chart.js": "^2.9.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "jw-angular-pagination": "^1.2.0",
     "ng-apexcharts": "^1.3.0",
     "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
