--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@angular/compiler": "~9.0.5",
     "@angular/core": "~9.0.5",
     "@angular/forms": "~9.0.5",
+    "@angular/localize": "~9.0.5",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "apexcharts": "^3.19.2",
     "bootstrap": "^4.5.0",
     "canvasjs": "^1.8.3",
@@ -33,6 +35,7 @@
     "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^12.1.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
